feat: 注册登录补充角色与档案字段